--- a/new 1.html
+++ b/new 1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
 		<title>
 			Naveen Shivnani
@@ -19,10 +20,21 @@
 	</ul>
 	</div>
 	<div class="intro">
-		<center><img src="my.JPG" width="20%"></center>
-		<center><h1>Naveen Shivnani</h1></center>
-		<center><h2>Web Developer And Designer</h2></center>
+		<div class="row">
+		<div class="col-md-2">
 		</div>
+		<div class="col-md-4">	
+		<img src="my.JPG" width="20%">
+		</div>
+		<div class="col-md-4">
+		<h1>Naveen Shivnani</h1>
+		<h2>Web Developer And Designer</h2>
+		</div>
+		<div class="col-md-2">
+		</div>
+		</div>
+	</div>
+		<button type="button" class="btn btn-primary" >about</button>
 		<div class="about" id="about">
 		<center><h1>About Me</h1></center>
 		<center><p> Hii, I am naveen shivnani and right now doing B.tech from Dit University,Dehradun.</p></center>
@@ -49,7 +61,7 @@
 	<div class="Links" id="Links">
 	<center><h1>Social links</h1></center>
 	<center><h2>Here I Am</h2></center>
-	<center><a href="hhtp://www.facebook.com" target "_blank">Facebook</a></center>
+	<center><a href="http://www.facebook.com" target "_blank">Facebook</a></center>
 	</div>
 	<div class ="qualifications" id="qualification">
 	<center><h1>My Qualification</hq></center>
